--- a/app/src/main/res/drawable/round_corner.xml
+++ b/app/src/main/res/drawable/round_corner.xml
@@ -7,6 +7,6 @@
         android:radius="25dp"
         />
     <solid
-        android:color="#f3f3f3"/>
+        android:color="@color/light_gray"/>
 
 </shape>
