--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -12,25 +12,25 @@
         android:layout_height="34dp"
         android:layout_margin="15dp"
         android:gravity="center"
-        android:text="Login"
+        android:text="@string/login"
         android:textAlignment="center"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.218" />
+        app:layout_constraintVertical_bias="0.283" />
 
     <TextView
         android:id="@+id/titlePrompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Please login with your credentials"
+        android:text="@string/login_subtitle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginTitle"
         app:layout_constraintVertical_bias="0.0" />
@@ -41,7 +41,7 @@
         android:layout_height="55dp"
         android:layout_margin="10dp"
         android:layout_marginTop="60dp"
-        android:text="Login"
+        android:text="@string/login"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,8 +56,8 @@
         android:layout_height="55dp"
         android:layout_margin="10dp"
         android:backgroundTint="@color/white"
-        android:text="Register"
-        android:textColor="#6750A3"
+        android:text="@string/register"
+        android:textColor="@color/purple"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_button"
         app:layout_constraintVertical_bias="0.0"
-        app:strokeColor="#6750A3"
+        app:strokeColor="@color/purple"
         app:strokeWidth="3dp" />
 
     <EditText
@@ -77,7 +77,7 @@
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
-        android:textColorHint="#8C8C8C"
+        android:textColorHint="@color/hint_text"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="10dp"
-        android:textColorHint="#8C8C8C"
+        android:textColorHint="@color/hint_text"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
