--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#F3F3F3</color>
+    <color name="hint_text">#7D7D7D</color>
+    <color name="purple">#6750A3</color>
 </resources>
