--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,28 +8,82 @@
     tools:context=".MainActivity">
 
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_margin="25dp"
         android:gravity="center"
-        app:layout_constraintBaseline_toTopOf="parent">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Guardian Messenger"
-            android:gravity="center"
-            android:textSize="25sp"
-            android:layout_margin="25dp"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Logout"
-            android:layout_margin="25dp"
-            android:id="@+id/logout_button"/>
+        android:text="Guardian Messenger"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.32"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.249" />
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="240dp"
+        android:layout_height="55dp"
+        android:text="Logout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.765" />
 
+    <Button
+        android:id="@+id/message_button"
+        android:layout_width="240dp"
+        android:layout_height="55dp"
+        android:text="@string/message"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.436" />
+
+    <Button
+        android:id="@+id/create_gc_button"
+        android:layout_width="240dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="19dp"
+        android:text="@string/create_group_chat"
+        app:layout_constraintBottom_toTopOf="@+id/request_outreach_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/message_button"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/request_outreach_button"
+        android:layout_width="240dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/request_outreach"
+        app:layout_constraintBottom_toTopOf="@+id/request_chat_logs"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/request_chat_logs"
+        android:layout_width="240dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/request_chat_logs"
+        app:layout_constraintBottom_toTopOf="@+id/logout_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
