--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#F3F3F3</color>
+    <color name="gray">#D6D6D6</color>
     <color name="hint_text">#7D7D7D</color>
     <color name="purple">#6750A3</color>
+    <color name="very_light_purple">#F3EBFF</color>
+
 </resources>
