--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.501">
+        app:layout_constraintVertical_bias="0.498">
 
         <TextView
             android:id="@+id/textView2"
@@ -55,6 +55,12 @@
             android:layout_width="240dp"
             android:layout_height="55dp"
             android:text="@string/request_chat_logs" />
+
+        <Button
+            android:id="@+id/manage_button"
+            android:layout_width="240dp"
+            android:layout_height="55dp"
+            android:text="@string/manage_account" />
 
         <Button
             android:id="@+id/logout_button"
