--- a/app/src/main/res/layout/activity_manage_account.xml
+++ b/app/src/main/res/layout/activity_manage_account.xml
@@ -195,7 +195,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/bdayField"
+            android:id="@+id/ageField"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
@@ -206,7 +206,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/bdayImage"
+                android:id="@+id/ageImage"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="5dp"
@@ -214,15 +214,14 @@
                 app:srcCompat="@drawable/baseline_cake_24" />
 
             <EditText
-                android:id="@+id/bdayInput"
+                android:id="@+id/ageInput"
                 android:layout_width="300dp"
                 android:layout_height="48dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:background="@color/light_gray"
-                android:ems="10"
-                android:inputType="date" />
+                android:ems="10" />
 
         </LinearLayout>
     </LinearLayout>
