--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -36,6 +36,13 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyler_view"
+        app:layout_constraintTop_toBottomOf="@id/headerBar"/>
+
+
     <LinearLayout
         android:id="@+id/bottomNav"
         android:layout_width="0dp"
@@ -56,7 +63,7 @@
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
             android:background="@drawable/purple_circle"
-            android:tint="@color/white"
+            app:tint="@color/white"
             app:srcCompat="?attr/homeAsUpIndicator" />
 
         <ImageButton
@@ -67,7 +74,7 @@
             android:layout_marginRight="40dp"
             android:background="@drawable/purple_circle"
             android:src="@drawable/baseline_add_24"
-            android:tint="@color/white" />
+            app:tint="@color/white" />
 
         <ImageButton
             android:id="@+id/search_button"
@@ -76,7 +83,7 @@
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
             android:background="@drawable/purple_circle"
-            android:tint="@color/white"
+            app:tint="@color/white"
             app:srcCompat="@drawable/baseline_search_24" />
     </LinearLayout>
 
