--- a/app/src/main/res/layout/outreach_screen.xml
+++ b/app/src/main/res/layout/outreach_screen.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,15 +24,15 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/purple_circle"
+            android:contentDescription="@string/back"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/manageAccountTitle"
+            app:layout_constraintEnd_toStartOf="@+id/outreachTitle"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:srcCompat="?attr/homeAsUpIndicator"
-            app:tint="@color/white"
-            android:contentDescription="@string/back_button" />
+            app:tint="@color/white" />
 
         <TextView
             android:id="@+id/outreachTitle"
@@ -59,13 +60,13 @@
         android:layout_marginEnd="106dp"
         android:layout_marginBottom="20dp"
         android:hint="@string/enter_employee_id"
-        app:layout_constraintBottom_toTopOf="@+id/button_button"
+        app:layout_constraintBottom_toTopOf="@+id/submit_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/outreachPrompt" />
 
     <Button
-        android:id="@+id/button_button"
+        android:id="@+id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="131dp"
@@ -79,7 +80,7 @@
         app:layout_constraintTop_toBottomOf="@+id/employee_id" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/outreachPrompt"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="105dp"
