--- a/app/src/main/res/layout/register_screen.xml
+++ b/app/src/main/res/layout/register_screen.xml
@@ -59,6 +59,19 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/round_corner"
+            android:hint="@string/name"
+            android:padding="10dp"
+            android:textColorHint="@color/hint_text"
+            android:textSize="16sp" />
+
+        <EditText
             android:id="@+id/email_id"
             android:layout_width="match_parent"
             android:layout_height="48dp"
