--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -60,31 +60,22 @@
             android:id="@+id/back_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginLeft="120dp"
+            android:layout_marginRight="120dp"
             android:background="@drawable/purple_circle"
-            app:tint="@color/white"
-            app:srcCompat="?attr/homeAsUpIndicator" />
+            app:srcCompat="?attr/homeAsUpIndicator"
+            app:tint="@color/white" />
 
         <ImageButton
             android:id="@+id/add_button"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginLeft="120dp"
+            android:layout_marginRight="120dp"
             android:background="@drawable/purple_circle"
             android:src="@drawable/baseline_add_24"
             app:tint="@color/white" />
 
-        <ImageButton
-            android:id="@+id/search_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:background="@drawable/purple_circle"
-            app:tint="@color/white"
-            app:srcCompat="@drawable/baseline_search_24" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
