--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,11 +39,6 @@
             android:layout_height="55dp"
             android:text="@string/message" />
 
-        <Button
-            android:id="@+id/create_gc_button"
-            android:layout_width="240dp"
-            android:layout_height="55dp"
-            android:text="@string/create_group_chat" />
 
         <Button
             android:id="@+id/request_outreach_button"
@@ -96,7 +91,7 @@
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:src="@drawable/baseline_error_24"
-            android:tint="@color/purple" />
+            app:tint="@color/purple" />
 
         <TextView
             android:id="@+id/massMsgText"
